--- a/view/crud/index.html
+++ b/view/crud/index.html
@@ -1,3 +1,6 @@
+<?php 
+    include_once('../../../controller/crud/aluno/consultar.php');
+?>
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -5,30 +8,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- css -->
-    <link rel="stylesheet" href="../_css/Menu.css">
-    <link rel="stylesheet" href="../_css/footer.css"> 
-    <link rel="stylesheet" href="../_css/Login.css">
-    <link rel="stylesheet" href="../_css/crud.css">
+    <link rel="stylesheet" href="../../_css/Menu.css">
+    <link rel="stylesheet" href="../../_css/footer.css"> 
+    <link rel="stylesheet" href="../../_css/Login.css">
+    <link rel="stylesheet" href="../../_css/aluno.css">
     <!-- fim-css -->
-    <link rel="shortcut icon" href="../_img/logo.png" type="image/x-icon">
-    <title>CRUD</title> 
+    <link rel="shortcut icon" href="../../_img/logo.png" type="image/x-icon">
+    <title>Aluno</title> 
 </head> 
 <body>
      <!-- Menu -->
 <header class="Home">    
     <a href="Menu.html">
-    <img src="../_img/Logo-SemFundo.png" alt="foto" id="logo"/></a>
+    <img src="../../_img/Logo-SemFundo.png" alt="foto" id="logo"/></a>
         <div class="link">
-            <li class="focus"><b><a href="../Menu.html">Home</a></b></li>
-            <li class="linke"><b><a href="../faleConosco.html">Fale conosco</a></b></li>
-            <li class="linke"><b><a href="../Desenvolvedores.html">Desenvolvedores</a></b></li>
+            <li class="focus"><b><a href="../../Menu.html">Aluno</a></b></li>
+            <li class="linke"><b><a href="../../faleConosco.html">Fale conosco</a></b></li>
+            <li class="linke"><b><a href="../../Desenvolvedores.html">Desenvolvedores</a></b></li>
         <!-- Projetos botão dropdown -->
             <div class="dropdown">
                 <button class="dropbtn" onclick="myFunction()">Exercicios</button>
                 <div class="dropdown-content" id="myDropdown">
-                    <a href="../exercicios.php"><b>Exercicios</b></a>
-                    <a href="../perguntasHTML.html"><b>HTML</b></a>
-                    <a href="../perguntasCSS.html"><b>CSS</b></a>
+                    <a href="../../exercicios.php"><b>Exercicios</b></a>
+                    <a href="../../perguntasHTML.html"><b>HTML</b></a>
+                    <a href="../../perguntasCSS.html"><b>CSS</b></a>
                 </div> 
             </div> 
         <!-- final do botão dropdown --> 
@@ -47,12 +50,12 @@
                   myDropdown.classList.remove('show');
                 }
               }
-            }
+            } 
         </script>
         <!--script do dropdown-->
             <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
             <div id="id01" class="modal">
-                <form class="modal-content animate" method="post" action="../controller/login/login.php">
+                <form class="modal-content animate" method="post" action="../../controller/login/login.php">
                     <div class="container">
                     <label for="uname"><b>Usuário</b></label>
                     <input type="text" placeholder="Entre com o seu usuário" name="email" required>
@@ -94,40 +97,39 @@
     <br><br><br><br><br>
 <div class="content">
     <center>
-        <div class="conteudo">
-            <div class="atividade">
-                <br><br>
-                <center>
-                    <img src="../_img/eu.jpeg" alt="imagem">
-                </center>
-                 <br>
-                <a href="./aluno/index.php">Aluno</a>
-            </div> 
-            <div class="atividade">
-                <br><br>
-                <center>
-                    <img src="../_img/eu.jpeg" alt="imagem">
-                </center>
-               <br>
-                <a href="./lista/index.php">Lista</a>
-            </div>
-            <div class="atividade">
-                <br><br>
-                <center>
-                    <img src="../_img/eu.jpeg" alt="imagem">
-                </center>
-               <br>
-                <a href="./exercicio/index.php">Exercicio</a>
-            </div>
-            <div class="atividade">
-                <br><br>
-                <center>
-                    <img src="../_img/eu.jpeg" alt="imagem">
-                </center>
-               <br>
-                 <a href="./resposta/index.php">Resposta</a>
-            </div>
+        <div class="conteudo-tabela">
+        <div class="top">
+        <img src="../../_img/Logo-SemFundo.png"width="80" height="80">
+                
+                </svg><h3>Usuarios cadastrados</h3>
         </div>
+           <table>
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nome</th>
+                        <th>Email</th>
+                        <th>Senha</th>
+                        <th>Pontos</th>
+                        <th>...</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <?php while ($dados = mysqli_fetch_assoc($resultado)) { ?>
+                    <tr>
+                        <td> <?= $dados['idAluno'] ?> </td>
+                        <td> <?= $dados['nome'] ?> </td>
+                        <td> <?= $dados['email'] ?> </td>
+                        <td> <?= $dados['senha'] ?> </td>
+                        <td> <?= $dados['pontos'] ?> </td>
+                        <td> <a href="<?= "editar.php?id=$dados[idAluno]"; ?>">Editar</a> <a href="<?= "excluir.php?id=$dados[idAluno]"; ?>">Excluir</a> </td>
+                    </tr>
+                    <?php } ?>
+                </tbody>
+            </table>
+        </div><br>
+        <a href="cadastrar.php" class="bt">Cadastrar Novo Aluno</a>
+        <a href="../../index.html" class="bt">Voltar</a>
     </center>
         <!--Start of Tawk.to Script-->
         <script src="JS/chat.js"></script>
@@ -141,7 +143,7 @@
             <div class="footer-columns">
                 <section class="footer-logo">
                     <a href="#">
-                        <img src="../_img/LogoBrancaSemFundo.png" alt="logo">
+                        <img src="../../_img/LogoBrancaSemFundo.png" alt="logo">
                     </a>
                 </section>
                 
@@ -153,27 +155,27 @@
                     <ul>
                         <li>
                             <a href="#" title="Instagram">
-                                <img src="../_img/Instagram.png" alt="imagem">
+                                <img src="../../_img/Instagram.png" alt="imagem">
                             </a>
                         </li>
                         <li>
                             <a href="#" title="gith">
-                                <img src="../_img/github-logo-removebg-preview.png" alt="imagem">
+                                <img src="../../_img/github-logo-removebg-preview.png" alt="imagem">
                             </a>
                         </li>
                         <li>
                             <a href="#" title="tiktok">
-                                <img src="../_img/tiktok-removebg-preview.png" alt="imagem">
+                                <img src="../../_img/tiktok-removebg-preview.png" alt="imagem">
                             </a>
                         </li>
                         <li>
                             <a href="#" title="linkedin">
-                                <img src="../_img/icons8-linkedin-48.png" alt="imagem">
+                                <img src="../../_img/icons8-linkedin-48.png" alt="imagem">
                             </a>
                         </li>
                         <li>
                             <a href="#" title="email">
-                                <img src="../_img/icons8-gmail-logo-48.png" alt="imagem">
+                                <img src="../../_img/icons8-gmail-logo-48.png" alt="imagem">
                             </a>
                         </li>
                         <!-- More social links -->
