--- a/view/menu.html
+++ b/view/menu.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="_css/footer.css"> 
     <link rel="stylesheet" href="_css/Login.css">
     <!-- fim-css -->
+        <!--Start of Tawk.to Script-->
+        <script src="JS/chat.js"></script>
+        <!--End of Tawk.to Script-->
     <link rel="shortcut icon" href="_img/logo.png" type="image/x-icon">
     <title>Home</title> 
 </head> 
@@ -96,17 +99,7 @@
         <img src="_img/GIF_sem_fundo.gif" alt="gif" id="GIF"><br><br><br><br>
     </center>
     <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
-        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-        (function(){
-        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-        s1.async=true;
-        s1.src='https://embed.tawk.to/64ffb4f2b1aaa13b7a764e06/1ha3dll78';
-        s1.charset='UTF-8';
-        s1.setAttribute('crossorigin','*');
-        s0.parentNode.insertBefore(s1,s0);
-        })();
-        </script>
+    
         <!--End of Tawk.to Script-->
 </div>
     <!--  fim do conteudo da pagina -->
