--- a/view/crud/index.html
+++ b/view/crud/index.html
@@ -19,9 +19,11 @@
     <a href="Menu.html">
     <img src="../_img/Logo-SemFundo.png" alt="foto" id="logo"/></a>
         <div class="link">
-            <li class="focus"><b><a href="../Menu.html">Home</a></b></li>
-            <li class="linke"><b><a href="../faleConosco.html">Fale conosco</a></b></li>
-            <li class="linke"><b><a href="../Desenvolvedores.html">Desenvolvedores</a></b></li>
+            <li class="linke"><b><a href="../controller/login/sair.php">Sair</a></b></li>
+            <li class="linke"><b><a href="../view/crud/index.html">CRUD</a></b></li>
+            <li class="linke"><b><a href="Menu.html">Home</a></b></li>
+            <li class="linke"><b><a href="faleConosco.html">Fale conosco</a></b></li>
+            <li class="linke"><b><a href="Desenvolvedores.html">Desenvolvedores</a></b></li>
         <!-- Projetos botão dropdown -->
             <div class="dropdown">
                 <button class="dropbtn" onclick="myFunction()">Exercicios</button>
