--- a/view/crud/index.html
+++ b/view/crud/index.html
@@ -15,82 +15,14 @@
 </head> 
 <body>
      <!-- Menu -->
-<header class="Home">    
-    <a href="Menu.html">
-    <img src="../_img/Logo-SemFundo.png" alt="foto" id="logo"/></a>
-        <div class="link">
-            <li class="linke"><b><a href="../controller/login/sair.php">Sair</a></b></li>
-            <li class="linke"><b><a href="../view/crud/index.html">CRUD</a></b></li>
-            <li class="linke"><b><a href="Menu.html">Home</a></b></li>
-            <li class="linke"><b><a href="faleConosco.html">Fale conosco</a></b></li>
-            <li class="linke"><b><a href="Desenvolvedores.html">Desenvolvedores</a></b></li>
-        <!-- Projetos botão dropdown -->
-            <div class="dropdown">
-                <button class="dropbtn" onclick="myFunction()">Exercicios</button>
-                <div class="dropdown-content" id="myDropdown">
-                    <a href="../exercicios.php"><b>Exercicios</b></a>
-                    <a href="../perguntasHTML.html"><b>HTML</b></a>
-                    <a href="../perguntasCSS.html"><b>CSS</b></a>
-                </div> 
-            </div> 
-        <!-- final do botão dropdown --> 
-        <!--script do dropdown-->
-        <script>
-            //Quando o usuário clicar no botão, alterne entre ocultar e mostrar o conteúdo do menu suspenso
-            function myFunction() {
-              document.getElementById("myDropdown").classList.toggle("show");
-            }
-            
-            //Feche o menu suspenso se o usuário clicar fora dele
-            window.onclick = function(e) {
-              if (!e.target.matches('.dropbtn')) {
-              var myDropdown = document.getElementById("myDropdown");
-                if (myDropdown.classList.contains('show')) {
-                  myDropdown.classList.remove('show');
-                }
-              }
-            }
-        </script>
-        <!--script do dropdown-->
-            <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
-            <div id="id01" class="modal">
-                <form class="modal-content animate" method="post" action="../controller/login/login.php">
-                    <div class="container">
-                    <label for="uname"><b>Usuário</b></label>
-                    <input type="text" placeholder="Entre com o seu usuário" name="email" required>
-
-                    <label for="psw"><b>Senha</b></label>
-                    <input type="password" placeholder="Entre com a sua senha" name="senha" required>
-                        
-                    <button type="submit" id="but">Login</button>
-                    <button id="but"><a href="Cadastro.html">Cadastre-se</a></button>
-                    <label>
-                        <input type="checkbox" checked="checked" name="remember"> Lembre-me
-                    </label>
-                    </div>
-
-                    <div class="container" style="background-color:#fdfdfd00">
-                    <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-                    <span class="psw"><a href="#">Esqueceu a sua senha ?</a></span>
-                    </div>
-                </form>
+     <header class="Home">     
+        <a href="Menu.html">
+        <img src="../_img/Logo-SemFundo.png" alt="foto" id="logo"/></a>
+            <div class="link">
+                <li class="focus"><b><a href="../../view/crud/index.html">CRUD</a></b></li>
+                <li class="linke"><b><a href="../../controller/login/sair.php">Sair</a></b></li>         
             </div>
-        
-                <!--script do menu-->
-                <script>
-                    // Get the modal
-                    var modal = document.getElementById('id01');
-
-                    // When the user clicks anywhere outside of the modal, close it
-                    window.onclick = function(event) {
-                        if (event.target == modal) {
-                            modal.style.display = "none";
-                        }
-                    }
-                </script>
-                <!--script do menu-->
-        </div>
-</header>
+    </header>
     <!-- fim do Menu -->
     <!-- conteudo da pagina -->
     <br><br><br><br><br>
@@ -100,7 +32,7 @@
             <div class="atividade">
                 <br><br>
                 <center>
-                    <img src="../_img/eu.jpeg" alt="imagem">
+                    <img src="../_img/aluno-removebg-preview.png" alt="imagem">
                 </center>
                  <br>
                 <a href="./aluno/index.php">Aluno</a>
@@ -108,7 +40,7 @@
             <div class="atividade">
                 <br><br>
                 <center>
-                    <img src="../_img/eu.jpeg" alt="imagem">
+                    <img src="../_img/lista-removebg-preview (1).png" alt="imagem">
                 </center>
                <br>
                 <a href="./lista/index.php">Lista</a>
@@ -116,7 +48,7 @@
             <div class="atividade">
                 <br><br>
                 <center>
-                    <img src="../_img/eu.jpeg" alt="imagem">
+                    <img src="../_img/exercicio-removebg-preview.png" alt="imagem">
                 </center>
                <br>
                 <a href="./exercicio/index.php">Exercicio</a>
@@ -124,7 +56,7 @@
             <div class="atividade">
                 <br><br>
                 <center>
-                    <img src="../_img/eu.jpeg" alt="imagem">
+                    <img src="../_img/resposta-removebg-preview.png" alt="imagem">
                 </center>
                <br>
                  <a href="./resposta/index.php">Resposta</a>
