--- a/view/desenvolvedores.html
+++ b/view/desenvolvedores.html
@@ -1,345 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+//oi
 <head>
-    <meta charset="UTF-8"> 
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <!-- css -->
-    <link rel="stylesheet" href="_css/Menu.css">
-    <link rel="stylesheet" href="_css/footer.css">
-    <link rel="stylesheet" href="_css/desnvolvedores.css">
-    <link rel="stylesheet" href="_css/Login.css">
+        <link rel="stylesheet" href="_css/Menu.css">
+        <link rel="stylesheet" href="_css/Cadastro.css">
     <!-- fim-css -->
+    
     <link rel="shortcut icon" href="_img/logo.png" type="image/x-icon">
-    <title>Desenvolvedores</title> 
+    <title>Home</title>
 </head>
+
 <body>
-     <!-- Menu -->
-<header class="Home">
-    <a href="Menu.html">
-    <img src="_img/Logo-SemFundo.png" alt="foto" id="logo"/></a>
-        <div class="link">
-            <li class="linke"><b><a href="Menu.html">Home</a></b></li>
-            <li class="linke"><b><a href="faleConosco.html">Fale conosco</a></b></li>
-            <li class="focus"><b><a href="Desenvolvedores.html">Desenvolvedores</a></b></li>
-        <!-- Projetos botão dropdown -->
-            <div class="dropdown">
-                <button class="dropbtn" onclick="myFunction()">Exercicios</button>
-                <div class="dropdown-content" id="myDropdown">
-                    <a href="Exercicios.html"><b>Exercicios</b></a>
-                    <a href="perguntasHTML.html"><b>HTML</b></a>
-                    <a href="perguntasCSS.html"><b>CSS</b></a>
-                </div>
-            </div> 
-        <!-- final do botão dropdown -->
-        <script>
-            /* Quando o usuário clicar no botão, alterne entre ocultar e mostrar o conteúdo do menu suspenso*/
-            function myFunction() {
-              document.getElementById("myDropdown").classList.toggle("show");
-            }
-            
-            //Feche o menu suspenso se o usuário clicar fora dele
-            window.onclick = function(e) {
-              if (!e.target.matches('.dropbtn')) {
-              var myDropdown = document.getElementById("myDropdown");
-                if (myDropdown.classList.contains('show')) {
-                  myDropdown.classList.remove('show');
-                }
-              }
-            }
-        </script>
-        <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
-        <div id="id01" class="modal">
-            <form class="modal-content animate"action="#" method="POST">
-                <div class="container">
-                <label for="uname"><b>Usuário</b></label>
-                <input type="text" placeholder="Entre com o seu usuário" name="uname" >
+    <header class="Home">
+        <a href="Menu.html"><img src="_img/Logo-SemFundo.png" alt="foto" id="logo"></a>
 
-                <label for="psw"><b>Senha</b></label>
-                <input type="password" placeholder="Entre com a sua senha" name="psw" >
+
+        <center>
+            <div class="card-cadastrar"><br>
+                <form method="post" action="../controller/cadastro/cadastro.php">
+                    <p class="titulo"><b>Cadastre-se</b></p>
+                    <label for="">Nome</label><br>
+                    <input class="fonte" type="text" name="nome" placeholder="Digite o seu nome completo..."
+                        required><br><br>
+                    <label for="">E-Mail</label><br>
+                    <input class="fonte" type="email" name="email" placeholder="Digite o seu E-mail..." required>
+                    <br><br>
+                    <label for="">Senha</label><br>
+                    <input class="fonte" type="password" name="senha" placeholder="Digite a sua senha..."
+                        required><br><br>
+                    <label for="">Confirmação da senha</label><br>
+                    <input class="fonte" type="password" name="senhaConf" placeholder="Confirme a sua senha..."
+                        required><br><br>
+                    <input type="submit" value="Cadastrar" id="btn-cadastrar"><br><br>
+                    <a href="Menu.html" id="btn-voltar">Cancel</a>
                     
-                <button type="submit" id="but">Login</button>
-                <button id="but"><a href="Cadastro.html">Cadastre-se</a></button>
-                
-                <label>
-                    <input type="checkbox" checked="checked" name="remember"> Lembre-me
-                </label>
-                </div>
 
-                <div class="container" style="background-color:#fdfdfd00">
-                <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-                <span class="psw"><a href="#">Esqueceu a sua senha ?</a></span>
-                </div>
-            </form>
-        </div>
-                <!--script do menu-->
-                <script>
-                    // Get the modal
-                    var modal = document.getElementById('id01');
-
-                    // When the user clicks anywhere outside of the modal, close it
-                    window.onclick = function(event) {
-                        if (event.target == modal) {
-                            modal.style.display = "none";
-                        }
-                    }
-                </script>
-                <!--script do menu-->
-        </div>
-        </div>
-        
-</header>
-    <!-- fim do Menu -->
-    <!-- conteudo da pagina -->
-    <br><br><br><br><br>
-     <h1>Desenvolvedores</h1><br>
-     <p>Esse site foi criado a partir de um projeto de TCC da Escola Estadual Técnica Centro Paula Souza.</p>
-
-     <div class="redes-sociais">
-            <div class="insta">
-                <img src="_img/Instagram.png" alt="imagem">
-                <ul>
-                    <li><a href="https://instagram.com/kevenferraz39?igshid=NzZlODBkYWE4Ng==">@kevenferraz39</a></li>
-                    <li><a href="https://instagram.com/nolacio_nathan04?igshid=MzRlODBiNWFlZA==">@nolacio_nathan04</a></li>
-                    <li><a href="https://instagram.com/ryzagb5?igshid=MzRlODBiNWFlZA==">@ryzagb5</a></li>
-                    <li><a href="https://instagram.com/mart1ns.ju?igshid=MzRlODBiNWFlZA==">@mart1ns.ju</a></li>
-                    <li><a href="https://instagram.com/heitorbiazon?igshid=MzRlODBiNWFlZA==">@heitorbiazon</a></li>
-                    <li><a href="https://instagram.com/praticode_site?igshid=MzRlODBiNWFlZA==">@praticode_site</a></li>
-                </ul>
-            </div><br>
-            <div class="git">
-                <img src="_img/github-logo-removebg-preview.png" alt="imagem">
-                <ul>
-                    <li><a href="https://github.com/Kevenferraz39">@Kevenferraz39</a></li>
-                    <li><a href="https://github.com/RayzaDSbr">@RayzaDSbr</a></li>
-                    <li><a href="https://github.com/nathannolacio">@nathannolacio</a></li>
-                    <li><a href="">@kkkkkkkkkkkk</a></li>
-                    <li><a href="">@kkkkkkkkkkkk</a></li>
-                    <li><a href="https://github.com/projetopraticode">@PratiCode</a></li>
-                </ul>
-            </div><br>
-            <div class="tiktok">
-                <img src="_img/tiktok-removebg-preview.png" alt="imagem">
-                <ul>
-                    <li><a href="">@kkkkkkkkkkkk</a></li>
-                    <li><a href="www.tiktok.com/@julia_mart1nsx">@julia_mart1nsx</a></li>
-                    <li><a href="">@kkkkkkkkkkkk</a></li>
-                    <li><a href="">@kkkkkkkkkkkk</a></li>
-                    <li><a href="">@kkkkkkkkkkkk</a></li>
-                    <li><a href="">@kkkkkkkkkkkk</a></li>
-                </ul>
-            </div><br>
-            <div class="linkedin">
-                <img src="_img/icons8-linkedin-48.png" alt="imagem">
-                <ul>
-                    <li><a href="https://www.linkedin.com/in/julia-martins-de-melo-costa-3135b6229">@Julia-martins</a></li>
-                    <li><a href="">@kkkkkkkkkkkk</a></li>
-                    <li><a href="">@kkkkkkkkkkkk</a></li>
-                    <li><a href="">@kkkkkkkkkkkk</a></li>
-                    <li><a href="">@kkkkkkkkkkkk</a></li>
-                    <li><a href="">@kkkkkkkkkkkk</a></li>
-                </ul>
-            </div><br>
-            <div class="email">
-                <img src="_img/icons8-gmail-logo-48.png" alt="imagem">
-                <ul>
-                    <li><a href="">@kkkkkkkkkkkk</a></li>
-                    <li><a href="">@kkkkkkkkkkkk</a></li>
-                    <li><a href="">@kkkkkkkkkkkk</a></li>
-                    <li><a href="">@kkkkkkkkkkkk</a></li>
-                    <li><a href="">@kkkkkkkkkkkk</a></li>
-                    <li><a href="">@kkkkkkkkkkkk</a></li>
-                </ul>
+                </form>
             </div>
-     </div>
-     <h1 id="redes-sociais">Nos siga nas redes sociais</h1>
-     <center>
-        <div class="fotos">
-            <div class="foto">
-                <img src="_img/eu.jpeg" alt="foto">
-            </div>
-            <div class="foto">
-                <img src="_img/Rayza.jpeg" alt="foto">
-            </div>
-            <div class="foto">
-                <img src="_img/heitor.jpeg" alt="foto">
-            </div>
-            <div class="foto">
-                <img src="_img/julia.jpeg" alt="foto">
-            </div>
-            <div class="foto">
-                <img src="_img/nathan.jpeg" alt="foto">
-            </div>
-                <!--Start of Tawk.to Script-->
-            <script type="text/javascript">
-                var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-                (function(){
-                var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-                s1.async=true;
-                s1.src='https://embed.tawk.to/64ffb4f2b1aaa13b7a764e06/1ha3dll78';
-                s1.charset='UTF-8';
-                s1.setAttribute('crossorigin','*');
-                s0.parentNode.insertBefore(s1,s0);
-                })();
-                </script>
-                <!--End of Tawk.to Script-->
-     </div>
-     </center>
-    <!--  fim do conteudo da pagina -->
-    <!--  footer -->
-    <footer>
-        <div class="footer-line"></div>
-        <div class="footer-wrapper">
-            <div class="footer-columns">
-                <section class="footer-logo">
-                    <a href="#">
-                        <img src="_img/LogoBrancaSemFundo.png" alt="logo">
-                    </a>
-                </section>
-                <section>
-                    <h3>Product</h3>
-                    <ul>
-                        <li>
-                            <a href="#" title="API">API</a>
-                        </li>
-                        <li>
-                            <a href="#" title="teste">teste</a>
-                        </li>
-                        <li>
-                            <a href="#" title="teste2">teste2</a>
-                        </li>
-                        <li>
-                            <a href="#" title="API">API</a>
-                        </li><li>
-                            <a href="#" title="API">API</a>
-                        </li>
-                        <!-- More links -->
-                    </ul>
-                </section>
-                <section>
-                    <h3>HTML</h3>
-                    <ul>
-                        <li>
-                            <a href="#" title="table">&lt; Tabela &gt;</a>
-                        </li>
-                        <li>
-                            <a href="#" title="div">&lt; Div &gt;</a>
-                        </li>
-                        <li>
-                            <a href="#" title="section">&lt; Section &gt;</a>
-                        </li>
-                        <li>
-                            <a href="#" title="header">&lt; Header &gt;</a>
-                        </li><li>
-                            <a href="#" title="main">&lt; Main &gt;</a>
-                        </li>
-                        <!-- More links -->
-                    </ul>
-                </section>
-                
-                <section>
-                    <h3>HTML</h3>
-                    <ul>
-                        <li>
-                            <a href="#" title="table">&lt; Tabela &gt;</a>
-                        </li>
-                        <li>
-                            <a href="#" title="div">&lt; Div &gt;</a>
-                        </li>
-                        <li>
-                            <a href="#" title="section">&lt; Section &gt;</a>
-                        </li>
-                        <li>
-                            <a href="#" title="header">&lt; Header &gt;</a>
-                        </li><li>
-                            <a href="#" title="main">&lt; Main &gt;</a>
-                        </li>
-                        <!-- More links -->
-                    </ul>
-                </section>
-                <section>
-                    <h3>CSS</h3>
-                    <ul>
-                        <li>
-                            <a href="#" title="after">::after</a>
-                        </li>
-                        <li>
-                            <a href="#" title="before">::before</a>
-                        </li>
-                        <li>
-                            <a href="#" title="hover">:hover</a>
-                        </li>
-                        <li>
-                            <a href="#" title="translate">:translate</a>
-                        </li><li>
-                            <a href="#" title="transition">transition</a>
-                        </li>
-                        <!-- More links -->
-                    </ul>
-                </section>
-                <section>
-                    <h3>CSS</h3>
-                    <ul>
-                        <li>
-                            <a href="#" title="after">::after</a>
-                        </li>
-                        <li>
-                            <a href="#" title="before">::before</a>
-                        </li>
-                        <li>
-                            <a href="#" title="hover">:hover</a>
-                        </li>
-                        <li>
-                            <a href="#" title="translate">:translate</a>
-                        </li><li>
-                            <a href="#" title="transition">transition</a>
-                        </li>
-                        <!-- More links -->
-                    </ul>
-                </section>
-                        <!-- More sections -->            
-            </div>
-            <div class="footer-bottom">
-                <div class="social-links">
-                    <ul>
-                        <li>
-                            <a href="#" title="Instagram">
-                                <img src="_img/Instagram.png" alt="imagem">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" title="gith">
-                                <img src="_img/github-logo-removebg-preview.png" alt="imagem">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" title="tiktok">
-                                <img src="_img/tiktok-removebg-preview.png" alt="imagem">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" title="linkedin">
-                                <img src="_img/icons8-linkedin-48.png" alt="imagem">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" title="email">
-                                <img src="_img/icons8-gmail-logo-48.png" alt="imagem">
-                            </a>
-                        </li>
-                        <!-- More social links -->
-                    </ul>
-                </div>
-                <small>
-                    &copy; Atheros Intelligence Ltd. <span id="year"></span>,
-                    All rights reseved
-                </small>
-            </div>
-        </div>
-    </footer>
-    <script>
-        document.getElementById('year').innerHTML = new Date().getFullYear();
-    </script>
-    <!--  fim do footer -->
+        </center>
 </body>
+
 </html>
